Changed breakpoint to avoid scrolling on 600px-wide screen and flexbox left wrapped for gallery

--- a/frontend/src/sass/_planet.scss
+++ b/frontend/src/sass/_planet.scss
@@ -57,7 +57,7 @@ $planet-colours: (
     li {
         margin-top: 1.9rem;
     }
-    @media (min-width: 600px) {
+    @media (min-width: 800px) {
         --title-size: 3.6rem;
         --paragraph-size: 2.4rem;
         display: grid;
@@ -91,7 +91,6 @@ $planet-colours: (
             margin-top: 0;
         }
         ul {
-            flex-wrap: initial;
             gap: .9rem;
             img {
                 border-radius: initial;
